feat: Initialize .NET 8.0 project with identity, logging, and request auditing infrastructure, including database migrations and application configuration.

--- a/RTROP TO LOGO/RTROPToLogoIntegration/RTROPToLogoIntegration/RTROPToLogoIntegration.csproj
+++ b/RTROP TO LOGO/RTROPToLogoIntegration/RTROPToLogoIntegration/RTROPToLogoIntegration.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
     <PackageReference Include="Serilog.Sinks.MSSqlServer" Version="6.6.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+    <PackageReference Include="Ulid" Version="1.4.1" />
     <PackageReference Include="WolverineFx" Version="5.15.0" />
   </ItemGroup>
 
